# Semantic-Modeling

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: results.ipynb
scripts/: extract_icd10_embeddings.py  extract_patient_embeddings.py  run_pipeline.py
src/asthma_e2/: __init__.py  config.py  criterion.py  data_loading.py  embeddings.py  evaluation.py  graph.py  propagation.py  scoring.py
tests/: test_criterion.py  test_graph.py  test_propagation.py  test_scoring.py
