[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asthma-e2"
version = "1.0.0"
description = "Strategy 2 (E2-B):embedding-based asthma detection "
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Clara Brunet" }]
keywords = ["nlp", "clinical-nlp", "ehr", "asthma", "knowledge-graph", "embeddings"]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "networkx>=3.0",
    "faiss-cpu>=1.7",
    "torch>=2.0",
    "transformers>=4.30",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "tqdm>=4.64",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
